añadido demo.gif

--- a/docs/TP1 - Matías Cisnero.tex
+++ b/docs/TP1 - Matías Cisnero.tex
@@ -236,6 +236,23 @@ def _aplicar_negativo(self):
 	Implementar una función que devuelva el histograma de niveles de gris de una imagen.
 \end{frame}
 
+\begin{frame}[fragile]{Histograma}
+	\justifying
+	
+	\begin{block}{Definición}
+		\[
+		h_i = \frac{n_i}{N.M}, i=0,...,255
+		\]
+	\end{block}
+	
+	\begin{itemize}
+		Donde
+		\item $n_i:$ cantidad de ocurrencias del nivel de gris i dentro de la imagen.
+		\item $NM:$ cantidad total de píxeles de la imagen, M filas y N columnas.
+	\end{itemize}
+	
+\end{frame}
+
 \section{Ejercicio 4}
 
 \begin{frame}
